spacing and hover button fixes

--- a/about.css
+++ b/about.css
@@ -96,7 +96,7 @@ p {
         justify-content: center;
     }
     .iconWords {
-        margin-left: 5vw;
+        margin-left: 6vw;
         margin-right: 20vw;
     }
     .container {
